# Neloura

./: CITATION.cff  LICENSE  MANIFEST.in  README.md  ast_test.py  coding.py  features.html  gdrive.py  local_coding.py  main.js  main.py  neloura.py  peak_finder.py  pyproject.toml  qt_app.py  requirements.txt  settings_api.py  style.css  toolbar.js
static/: asttest.js  canvas.js  catalog_viewer.js  catalog_webgl.js  catalogs.js  coding.js  colorcet_palettes.json  coords_overlay.js  credit.js  files.js  hdu_opener.js  image-processing.js  index.html  local_coding.js  main.js  mast.js  opendragon.js  peak.js  plotter.js  progress.css  rgb.js  save.js  script.js  sed.js  settings.js  style.css  toolbar.js  usage.js  wcs.js
static/logo/: app.icns
static/workers/: json_parse_worker.js
